   FCKeditor. More testing is needed, however.
 - Fixed issue where AVIM would ignore words following certain punctuation
   characters, such as curly quotes and ellipses.
 - Changed keyboard shortcut for toggling AVIM to Ctrl+Alt+V (Cmd+Opt+V on the
   Mac) to avoid a collision with Adblock Plus.
 - Added the Ctrl+: (Cmd+:) and Ctrl+; (Cmd+;) keyboard shortcuts to cycle back
   and forward through the input method list.
 - Added the Ctrl+Alt+S (Cmd+Opt+S) keyboard shortcut to toggle the "Enforce
   Spelling" option.
 - Added the Ctrl+Alt+; (Cmd+Opt+;) keyboard shortcut to toggle the "Old
   Accents" option.
 - Removed the menu item to toggle the status bar panel, since it is redundant
   with the preference window now.

Version 20080224.91 (Thursday, July  3, 2008)
 - Added a warning that indicates when Mudim is enabled and turned on, along
   with a button to turn Mudim off (as opposed to disabling the extension).
   Mudim often interferes with AVIM, since the two extensions serve the same
   purpose.
 - Optimized the toolbar button images.

Version 20080224.93 (Friday, July  4, 2008)
 - Updated home page to point to 1ec5.org.
 - Made ignored textbox IDs case-insensitive.

Version 20080224.96 (Saturday, July  5, 2008)
 - Fixed an issue where Mudim would not be turned off after the Disable Mudum
   button is pressed.
 - Added support for the Pencil extension.
 - Fixed an issue where the status bar panel would not work in ChatZilla.

Version 20080224.110 (Sunday, July 13, 2008)
 - Added a "script monitor", which fixes compatibility issues with the AVIM/HIM,
   VietTyping, and VietUni scripts by turning off any instances of them when
   typing in a webpage.
 - Added a preference to disable the script monitor, in case it causes
   performance issues.
 - Forced ignored textbox IDs to lowercase.
 - Cleared ID textbox after the ID is ignored.
 - Fixed encoding issues that prevented the Vietnamese locale from loading.

Version ${Version} (${Date})