@@ -22,6 +22,12 @@
 <!ENTITY avim-viqr.accesskey "Q">
 <!ENTITY avim-viqr-star.label "VIQR*">
 <!ENTITY avim-viqr-star.accesskey "R">
+
+<!ENTITY avim-menu-prev-method.label "Método de Entrada Anterior">
+<!ENTITY avim-menu-prev-method.accesskey "n">
+<!ENTITY avim-menu-next-method.label "Método de Entrada Siguiente">
+<!ENTITY avim-menu-next-method.accesskey "S">
+
 <!ENTITY avim-disabled.label "Apagada">
 
 <!-- Options -->
@@ -35,6 +41,3 @@
 <!ENTITY avim-oldaccents.label "Acentos Viejos">
 <!ENTITY avim-oldaccents.accesskey "j">
 <!ENTITY avim-oldaccents.description "Poner los accentos en la primera vocal de un diptongo">
-<!-- <!ENTITY avim-statuspanel.label "Panel de la Barra de Estado">
-<!ENTITY avim-statuspanel.accesskey "P">
-<!ENTITY avim-statuspanel.description "Mostrar el panel de la barra de estado de AVIM"> -->
