@@ -90,3 +90,9 @@ Version 20080224.110 (Sunday, July 13, 2008)
  - Fixed encoding issues that prevented the Vietnamese locale from loading.
 
 Version ${Version} (${Date})
+ - Added explicit menu items for switching to the previous and next input
+   methods. Previously, keys for cycling methods would move around as the input
+   method changed, but this approach cause problems in Mac OS X.
+ - Options such as input method can no longer be changed when AVIM is disabled.
+   Before, the menu items for these options were disabled, but the keyboard
+   shortcuts were still active.
